--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -171,7 +171,22 @@ en:
   copied: Copied
   copy: Copy
   date:
-    month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
+    month_names:
+      [
+        ~,
+        January,
+        February,
+        March,
+        April,
+        May,
+        June,
+        July,
+        August,
+        September,
+        October,
+        November,
+        December,
+      ]
   default_admin: You are still using the default password for this account. Please click <a href="%{edit_link}">here</a> to change it
   delete: Delete
   delivery_error: An error occured during email delivery. Please contact an administrator!
@@ -560,8 +575,9 @@ en:
     accept_existing: I accept the terms and conditions
     title: Terms and Conditions
   test_install: >
-    This deployment is using a pre-configured testing server, you should replace this with your own.
-    For details, see the %{href}.
+    This deployment is using a pre-configured testing server, you should replace this with your own. For details, see the %{href}.
+
+
   update: Update
   verify:
     accept: Verify
